# imagehub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/media/: CAPTURE.md
scripts/: extract-changelog.mjs  release-notes.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  icon_packs.rs  icon_prompts.rs  lib.rs  main.rs  project.rs  thumbs.rs  tools.rs  watcher.rs
src/components/: AboutView.tsx  ActionBar.tsx  CanvasTile.tsx  ConfirmDeleteModal.tsx  ConfirmFilesModal.tsx  DropZone.tsx  HistoryView.tsx  JobList.tsx  Lightbox.tsx  Modal.tsx  OptimizedBanner.tsx  OutputSelect.tsx  ProjectBar.tsx  ProjectSkeleton.tsx  ProjectView.tsx  QualityScore.tsx  ScanModal.tsx  Select.tsx  SettingsView.tsx  Sidebar.tsx  StudioView.tsx  Thumb.tsx  Toaster.tsx  UnusedSection.tsx  UpdateModal.tsx  UpdatedModal.tsx
src/lib/: actions.ts  icons.ts  output.ts  paths.ts  project.ts  projectsStore.ts  score.ts  settings.ts  updater.ts
src/types/: job.ts
