[package]
name = "imagehub"
version = "0.7.2"
description = "Traitement & optimisation d'images en local + audit des assets de projets de dev"
authors = ["REDIOUS"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imagehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
notify = "8.2.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp", "ico", "bmp"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# En dev, optimiser les dépendances (décodage d'images 10-50× plus rapide)
# sans ralentir la recompilation de notre propre code.
[profile.dev.package."*"]
opt-level = 2

